fix:no transition list table to prevent layout issue

--- a/Frontend/src/app/common/ui/list-table/list-table.component.scss
+++ b/Frontend/src/app/common/ui/list-table/list-table.component.scss
@@ -269,6 +269,9 @@ $badgeWidth:250px;
 .row .icon{
   padding-top:20px;
 }
+.row{
+  transition: none;
+}
 .list .row{
   margin:0 0!important;
 }
